force-app/main/default/objects/ImpartnerBP2__BusinessPlanRefreshRequest__c/ImpartnerBP2__BusinessPlanRefreshRequest__c.object-meta.xml
<CustomObject>
    <label>Business Plan Refresh Request</label>
    <nameField>
        <displayFormat>BPRR-{0000000}</displayFormat>
        <label>Business Plan Refresh Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Plan Refresh Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>