force-app/main/default/objects/ImpartnerBP2__BusinessPlanRefreshRequest__c/fields/ImpartnerBP2__BusinessPlanId__c.field-meta.xml
<CustomField>
    <fullName>ImpartnerBP2__BusinessPlanId__c</fullName>
    <label>Business Plan Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>