force-app/main/default/objects/ImpartnerBP2__BusinessPlanRefreshRequest__c/fields/ImpartnerBP2__Message__c.field-meta.xml
<CustomField>
    <fullName>ImpartnerBP2__Message__c</fullName>
    <description>Holds an error message if one occurs during the refresh process, or some debug information during development.</description>
    <inlineHelpText>Holds an error message if one occurs during the refresh process, or some debug information during development.</inlineHelpText>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>