force-app/main/default/objects/ImpartnerBP2__BusinessPlanRefreshRequest__c/fields/ImpartnerBP2__RefreshStatus__c.field-meta.xml
<CustomField>
    <fullName>ImpartnerBP2__RefreshStatus__c</fullName>
    <label>Refresh Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Could Not Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>